update interface shots, prettify figures

--- a/report/report.tex
+++ b/report/report.tex
@@ -228,7 +228,7 @@ We wanted to consider the use case described above in our interface design.  See
 \begin{figure}
 \centering
 \includegraphics[width=3.25in]{images/fullInterface.png}
-\caption{Our final in-browser interface.  Heatmaps and histograms of statistics appear on the left, and the model in the currently-selected orientation appears on the right.  Print time appears in red, support material use in green, and surface area of model contacting support material appears in blue.  The model faces are colored by normal so the user can easily see the shape of the object.}
+\caption{Our final in-browser interface.  Heatmaps and histograms of statistics appear on the left, and the model in the currently-selected orientation appears on the right.  Print time appears in red, support material use in green, and surface area of model contacting support material appears in purple.  A fourth histogram of angles of support material contact (correlated with support removal time) appears at the upper right.  The model faces of the rendered STL are colored by normal so the user can easily see the shape of the object.}
 \label{fig:full}
 \end{figure}
 
